# image-segmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  network.py  pyproject.toml  requirements.txt  setup.sh  train.py  visualize_output.py
experiments/: upsampler_v0.py  upsampler_v1.py
