[project]
name = "image-segmentation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.0",
    "keras-cv>=0.9.0",
    "keras-hub>=0.19.0",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pytorch-lightning>=2.5.1",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
